<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bmiUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA82FF"
    android:orientation="vertical"
    tools:context=".BMI">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:fontFamily="@font/sassooninfantrgregular"
        android:text="@string/bmiTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="130dp"
            android:gravity="center"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner_btn"
            android:backgroundTint="@color/white">

            <Button
                android:id="@+id/maleBtn"
                android:layout_width="80dp"
                android:layout_marginTop="5dp"
                android:layout_height="80dp"
                android:drawableTint="@color/white"
                android:background="@drawable/round"
                android:backgroundTint="@color/btn_bk_clr"
                android:drawableStart="@drawable/male_svg"
                android:gravity="center"
                android:onClick="maleCicked" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".01"
                android:layout_marginTop="10dp"
                android:text="@string/bmiMale"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="130dp"
            android:gravity="center"
            android:layout_marginStart="90dp"
            android:orientation="vertical"
            android:layout_height="130dp"
            android:background="@drawable/rounded_corner_btn"
            android:backgroundTint="@color/white">

        <Button
            android:id="@+id/femaleBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:drawableTint="@color/white"
            android:layout_marginTop="5dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/btn_bk_clr"
            android:drawableStart="@drawable/female_svg"
            android:gravity="center"
            android:onClick="femaleClicked" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing=".01"

                android:text="@string/bmiFemale"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp">




    </LinearLayout>



    <View
        style="@style/Divider.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@color/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:text="Age"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:text="Height"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:gravity="right"
            android:text="Weight"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ageID"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:hint="AGE?"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/divider"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/heightID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:hint="In cm"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/divider"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:letterSpacing=".1"
            android:text="cm"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weightID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:hint="In Kg"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/divider"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sassooninfantrgregular"
            android:letterSpacing=".1"
            android:text="kg"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/tap_to_playID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner_btn"
        android:backgroundTint="@color/intro_btn_clr_1"
        android:fontFamily="@font/sassooninfantrgregular"
        android:onClick="calculateBMI"
        android:text="Calculate"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>